--- a/src/components/PlayLinkButton.astro
+++ b/src/components/PlayLinkButton.astro
@@ -2,7 +2,7 @@
     
     <style>
         a{
-            background-color: greenyellow;
+            background-color: #1ed760;
             color: black;
             padding: 1rem;
             border-radius: 50px;
