--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,25 @@
+/* ------ 
+  Resets / normalize
+------ */
 @import url("https://fonts.googleapis.com/css?family=Roboto:400");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+  background: var(--surface-default);
+}
+
+body {
+  height: 100%;
+  line-height: 1.6;
+  color: #121212;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  overscroll-behavior-block: none;
+}
 
 html {
   font-size: 100%;
@@ -30,6 +51,7 @@ h5 {
 h1 {
   margin-top: 0;
   font-size: 1.802rem;
+  color: #fff;
 }
 
 h2 {
