--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Nav from "../components/Nav.astro";
 import Playlist from "../components/Playlist.astro";
 import Footer from "../components/Footer.astro";
 import "../styles/global.css";
+import TopBar from "../components/TopBar.astro";
 
 ---
 
@@ -18,7 +19,7 @@ import "../styles/global.css";
 <body>
 
 <Nav/>
-
+<TopBar />
 <main>
     <h1>Spotify-playlister</h1>
     <div class="playlistgrid">
@@ -48,8 +49,37 @@ import "../styles/global.css";
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
         gap: 40px;
     }
-    main{
-        background-color: rgb(51, 51, 51);
-        padding: 30px;
-    }
+    body {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: auto 1fr auto;
+    grid-template-areas:
+      "nav topbar"
+      "nav main"
+      "footer footer";
+    height: 100%;
+  }
+  :global(main) {
+    grid-area: main;
+  }
+  :global(nav) {
+    grid-area: nav;
+  }
+  :global(.topbar) {
+    grid-area: topbar;
+  }
+  :global(footer) {
+    grid-area: footer;
+  }
+  main {
+    display: grid;
+    grid-auto-rows: min-content;
+    gap: 2.5rem;
+
+    background: linear-gradient(#1f1f1f 0, #121212 100%) 0 0 /
+        100% 20rem no-repeat,
+        #121212;
+    overflow-y: auto;
+    padding:  1.5rem 1rem;
+  }
 </style>
