--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -1,46 +1,25 @@
 ---
-import Nav from "../components/Nav.astro";
 import Playlist from "../components/Playlist.astro";
 import "../styles/global.css";
-import TopBar from "../components/TopBar.astro";
-import Footer from "../components/Footer.astro";
-
-
+import MainLayout from "../layouts/MainLayout.astro";
 ---
 
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search</title>
-</head>
-
-<body>
-<Nav/>
-<TopBar />
-<main>
+<MainLayout hasSearch={true}>
     <div class="playlistgrid">
-        <Playlist cardimg="https://picsum.photos/id/65/150/150" text="her kommer tekst" header="Today's Top Hits" />
-        <Playlist cardimg="https://picsum.photos/id/68/150/150" text="her kommer tekst" header="Rap Caviar"/>
-        <Playlist cardimg="https://picsum.photos/id/76/150/150" text="her kommer tekst" header="All Out 2010s"/>
-        <Playlist cardimg="https://picsum.photos/id/240/150/150" text="her kommer tekst" header="Rock Classics"/>
-        <Playlist cardimg="https://picsum.photos/id/331/150/150" text="her kommer tekst" header="Chill Hits"/>
+        <Playlist cardimg="https://picsum.photos/id/65/150/150" header="Today's Top Hits" New={true}/>
+        <Playlist cardimg="https://picsum.photos/id/68/150/150"  header="Rap Caviar"/>
+        <Playlist cardimg="https://picsum.photos/id/76/150/150"  header="All Out 2010s"New={true}/>
+        <Playlist cardimg="https://picsum.photos/id/240/150/150"  header="Rock Classics"/>
+        <Playlist cardimg="https://picsum.photos/id/331/150/150" header="Chill Hits"New={true}/>
       </div>
       <div class="playlistgrid">
-          <Playlist cardimg="https://picsum.photos/id/65/150/150" text="her kommer tekst" header="Today's Top Hits" />
-          <Playlist cardimg="https://picsum.photos/id/68/150/150" text="her kommer tekst" header="Rap Caviar"/>
-          <Playlist cardimg="https://picsum.photos/id/76/150/150" text="her kommer tekst" header="All Out 2010s"/>
-          <Playlist cardimg="https://picsum.photos/id/240/150/150" text="her kommer tekst" header="Rock Classics"/>
-          <Playlist cardimg="https://picsum.photos/id/331/150/150" text="her kommer tekst" header="Chill Hits"/>
+          <Playlist cardimg="https://picsum.photos/id/65/150/150"  header="Today's Top Hits" />
+          <Playlist cardimg="https://picsum.photos/id/68/150/150" header="Rap Caviar"New={true}/>
+          <Playlist cardimg="https://picsum.photos/id/76/150/150" header="All Out 2010s"/>
+          <Playlist cardimg="https://picsum.photos/id/240/150/150"  header="Rock Classics"New={true}/>
+          <Playlist cardimg="https://picsum.photos/id/331/150/150"  header="Chill Hits"/>
         </div>
-</main>
-
-<Footer/>
-</body>
-
-</html>
+    </MainLayout>
 
 <style>
      .playlistgrid{
